...
    <variable
        name="viewModel"
        type="com.truethat.android.viewmodel.ReactableViewModel"
        />
  </data>
  <android.support.constraint.ConstraintLayout
    android:id="@+id/reactableFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.ReactableFragment"
    >

  <android.support.constraint.ConstraintLayout
...
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="1.0"
      >
    <ImageView
        android:id="@+id/reactionImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/image_content_description"
        android:src="@{viewModel.mReactionDrawableResource}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/reactionCountText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/emoji_happy"
        />

    <TextView
...
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0"
      >
    <TextView
        android:id="@+id/directorNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="4"
        android:text="@{viewModel.mDirectorName}"
        android:textColor="@color/light"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="@{viewModel.mDirectorNameVisibility ? View.VISIBLE : View.GONE}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/timeAgoText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/timeAgoText"
        android:layout_width="wrap_content"
...
