...
    <variable
        name="viewModel"
        type="com.truethat.android.viewmodel.ReactablesPagerViewModel"
        />
  </data>
  <android.support.constraint.ConstraintLayout
      android:id="@+id/activityRootView"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:context=".view.fragment.ReactablesPagerFragment"
      >

    <android.support.constraint.ConstraintLayout
...
          android:id="@+id/nonFoundImage"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:contentDescription="@string/image_content_description"
          android:scaleType="centerInside"
          android:src="@drawable/sad_teddy"
          app:layout_constraintBottom_toTopOf="@+id/notFoundText"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          />
      <TextView
          android:id="@+id/notFoundText"
...
